@@ -57,6 +57,15 @@ extern "C" {
 /*=======================================
   Macro Definitions
 =======================================*/
+#define SSCM_VERSION_MAJOR      (0)
+#define SSCM_VERSION_MINOR      (7)
+#define SSCM_VERSION_PATCHLEVEL (0)
+#define SSCM_VERSION_REQUIRE(major, minor, patchlevel)			     \
+  ((major) < SSCM_VERSION_MAJOR						     \
+   || ((major) == SSCM_VERSION_MAJOR && (minor) < SSCM_VERSION_MINOR)	     \
+   || ((major) == SSCM_VERSION_MAJOR && (minor) == SSCM_VERSION_MINOR	     \
+       && (patchlevel) <= SSCM_VERSION_PATCHLEVEL))
+
 #define SCM_ERRMSG_MEMORY_EXHAUSTED    "memory exhausted"
 
 /* An empty definition is generally not a good idea.  (Consider for
